RESOLVED FIXED160664
It should be possible to re-initialize a CustomEvent after it's been dispatched
https://bugs.webkit.org/show_bug.cgi?id=160664
Summary It should be possible to re-initialize a CustomEvent after it's been dispatched
Chris Dumez
Reported 2016-08-08 11:06:45 PDT
It should be possible to re-initialize a CustomEvent after it's been dispatched: - https://dom.spec.whatwg.org/#dom-customevent-initcustomevent
Attachments
Patch (10.54 KB, patch)
2016-08-08 11:13 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (686.14 KB, application/zip)
2016-08-08 13:10 PDT, Build Bot
no flags
Chris Dumez
Comment 1 2016-08-08 11:13:32 PDT
Build Bot
Comment 2 2016-08-08 13:10:13 PDT
Comment on attachment 285574 [details] Patch Attachment 285574 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1835786 New failing tests: http/tests/security/aboutBlank/security-context-alias.html http/tests/xmlhttprequest/document-domain-set.html http/tests/workers/worker-document-domain-security.html http/tests/security/aboutBlank/security-context-grandchildren-alias.html http/tests/security/postMessage/origin-unaffected-by-document-domain.html fast/scrolling/ios/scroll-events-back-forward.html
Build Bot
Comment 3 2016-08-08 13:10:17 PDT
Created attachment 285580 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Chris Dumez
Comment 4 2016-08-08 13:14:18 PDT
(In reply to comment #2) > Comment on attachment 285574 [details] > Patch > > Attachment 285574 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/1835786 > > New failing tests: > http/tests/security/aboutBlank/security-context-alias.html > http/tests/xmlhttprequest/document-domain-set.html > http/tests/workers/worker-document-domain-security.html > http/tests/security/aboutBlank/security-context-grandchildren-alias.html > http/tests/security/postMessage/origin-unaffected-by-document-domain.html > fast/scrolling/ios/scroll-events-back-forward.html iOs failures seem unrelated :/ -PASS: XMLHttpRequest allowed with document.domain set. +CONSOLE MESSAGE: line 9: TypeError: window.internals.settings.setTreatIPAddressAsDomain is not a function. (In 'window.internals.settings.setTreatIPAddressAsDomain(true)', 'window.internals.settings.setTreatIPAddressAsDomain' is undefined)
Ryan Haddad
Comment 5 2016-08-08 13:16:07 PDT
(In reply to comment #4) > iOs failures seem unrelated :/ > > -PASS: XMLHttpRequest allowed with document.domain set. > +CONSOLE MESSAGE: line 9: TypeError: > window.internals.settings.setTreatIPAddressAsDomain is not a function. (In > 'window.internals.settings.setTreatIPAddressAsDomain(true)', > 'window.internals.settings.setTreatIPAddressAsDomain' is undefined) Thanks for the heads up. I believe these tests became flaky with https://trac.webkit.org/changeset/204260.
Alex Christensen
Comment 6 2016-08-08 20:31:08 PDT
Comment on attachment 285574 [details] Patch Is there no web platform test for this?
Chris Dumez
Comment 7 2016-08-08 20:32:42 PDT
(In reply to comment #6) > Comment on attachment 285574 [details] > Patch > > Is there no web platform test for this? There was for Event (see https://bugs.webkit.org/show_bug.cgi?id=160664), but not for Event subclasses.
WebKit Commit Bot
Comment 8 2016-08-09 11:53:39 PDT
Comment on attachment 285574 [details] Patch Clearing flags on attachment: 285574 Committed r204288: <http://trac.webkit.org/changeset/204288>
WebKit Commit Bot
Comment 9 2016-08-09 11:53:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.