It should be possible to re-initialize a CustomEvent after it's been dispatched https://bugs.webkit.org/show_bug.cgi?id=160664

Reviewed by Darin Adler.

Source/WebCore:

It should be possible to re-initialize a CustomEvent after it's been dispatched:
- https://dom.spec.whatwg.org/#dom-customevent-initcustomevent

Test: fast/events/initCustomEvent-after-dispatch.html

* dom/CustomEvent.cpp:
(WebCore::CustomEvent::initCustomEvent):

LayoutTests:

* fast/events/initCustomEvent-after-dispatch-expected.txt: Copied from LayoutTests/fast/events/initEvent-after-dispatch-expected.txt.
* fast/events/initCustomEvent-after-dispatch.html: Copied from LayoutTests/fast/events/initEvent-after-dispatch.html.
Add layout test coverage.

* fast/events/initEvent-after-dispatch-expected.txt:
* fast/events/initEvent-after-dispatch.html:
Fix related layout test.


Canonical link: https://commits.webkit.org/178815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204288 268f45cc-cd09-0410-ab3c-d52691b4dbfc